@@ -80,13 +80,13 @@ mi_execute_to "exec-continue" \
               "breakpoint-hit\",disp=\"keep\",bkptno=\"$any_nb\",exception-name=\"CONSTRAINT_ERROR" \
               "foo" "" ".*" ".*" \
               ".*" \
-              "continue to exception catchpoint hit"
+              "continue until CE caught by all-exceptions catchpoint"
 
 mi_execute_to "exec-continue" \
               "breakpoint-hit\",disp=\"keep\",bkptno=\"$any_nb\",exception-name=\"PROGRAM_ERROR" \
               "foo" "" ".*" ".*" \
               ".*" \
-              "continue to exception catchpoint hit"
+              "continue until PE caught by all-exceptions catchpoint"
 
 ################################################
 # 2. Try catching only some of the exceptions. #
@@ -123,11 +123,11 @@ mi_execute_to "exec-continue" \
               "breakpoint-hit\",disp=\"keep\",bkptno=\"$any_nb" \
               "foo" "" ".*" ".*" \
               ".*" \
-              "continue to exception catchpoint hit"
+              "continue to assert failure catchpoint hit"
 
 mi_execute_to "exec-continue" \
               "breakpoint-hit\",disp=\"keep\",bkptno=\"$any_nb\",exception-name=\"CONSTRAINT_ERROR" \
               "foo" "" ".*" ".*" \
               ".*" \
-              "continue to exception catchpoint hit"
+              "continue to unhandled exception catchpoint hit"
 
